Changed logos view. Replaced link from bugzilla to github issues

--- a/2015-08-09-ctyissuetracker.html
+++ b/2015-08-09-ctyissuetracker.html
@@ -117,7 +117,7 @@
 		<!-- /.container -->
 </nav>
 
-      <p>Issues and bugs related to Vorto are tracked with the <strong>Eclipse Bugzilla</strong> tracking system.  If you find any issues, please report them  <a href="https://github.com/eclipse/vorto/issues" target="_blank">here.</a></p>
+      <p>Issues and bugs related to Vorto are tracked with the <strong>Github Issue</strong> tracking system.  If you find any issues, please report them  <a href="https://github.com/eclipse/vorto/issues" target="_blank">here.</a></p>
 
     <!-- Footer -->
 <footer>
