--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ $(document).ready(function(){
       <div class="wow fadeIn" data-wow-duration="4s">
          
       <h2 class="box-headline" id="header1">What is Vorto</h2>
-      <p><p><b>Vorto</b> is an open source tool that allows to create and manage technology agnostic, abstract device descriptions, so called information models. Information models <b>describe</b> the attributes and the capabilities of real world devices. These information models can be managed and <b>shared</b> within the Vorto Information Model Repository. Code Generators for Information Models let you <b>integrate</b> devices into different platforms.</p>
+      <p><p><b>Vorto</b> is an open source tool that allows to create and manage technology agnostic, abstract device descriptions, so called information models. Information models <b>describe</b> the attributes and the capabilities of real world devices. These information models can be managed and <b>shared</b> within the Vorto Information Model Repository. Code Generators for Information Models let you <b>integrate</b> devices into different platforms. </p>
 </p>
       </div>
   </div>
@@ -767,10 +767,10 @@ $(document).ready(function(){
           </div>
     <div class="col-md-2">
      
-     <a href= "https://bugs.eclipse.org/bugs/buglist.cgi?product=vorto&component=Core" target="_blank"><h4>Issue Tracker</h4></a>
+     <a href= "https://github.com/eclipse/vorto/issues" target="_blank"><h4>Issue Tracker</h4></a>
      </div>
      <div class="col-md-7">
-    <section><p>Issues and bugs related to Vorto are tracked with the <strong>Eclipse Bugzilla</strong> tracking system.  If you find any issues, please report them  <a href="https://github.com/eclipse/vorto/issues" target="_blank">here.</a></p>
+    <section><p>Issues and bugs related to Vorto are tracked with the <strong>Github Issue</strong> tracking system.  If you find any issues, please report them  <a href="https://github.com/eclipse/vorto/issues" target="_blank">here.</a></p>
 </section>
  </div>
 </div>
