--- a/overview/vorto_overview.html
+++ b/overview/vorto_overview.html
@@ -63,7 +63,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="../index.html">Vorto</a>
+						<a class="navbar-brand" href="../index.html">Eclipse Vorto</a>
 				</div>
 				<div class="collapse navbar-collapse wow fadeIn" id="navbar-collapse" data-wow-delay="0.2s">
 						<ul class="nav navbar-nav pull-right">
@@ -158,13 +158,19 @@
 
 <p>Interoperability is one of the most important criteria in the IoT. This is solved using IoT platforms that are able to integrate devices and to provide an infrastructure for interactions. It is crucial for device vendors to enable platform vendors to integrate their devices without major effort. A device that can be integrated on various platforms can be used in various scenarios which helps to increase the sales of the specific device vendor. The Vorto IoT toolset allows to comfortably create abstract, technology agnostic descriptions of devices. These descriptions are machine readable and thus can be transformed into formats that are required for an integration into a specific platform. By providing such device descriptions a device vendor allows an easy integration of devices into platforms for which Vorto code generators exist.</p>
 
+<p><a href="https://marketplace.yatta.de/profiles/ziXJ" target="_blank"><strong>Vorto IDE for device manufacturers</strong></a></p>
+
 <h2 id="platform-vendors">Platform Vendors</h2>
 
 <p>There is a large variety of smart devices available in the market. A customer doesn’t want to be restricted to devices of specific vendors because the platform, his IoT environment is based on, doesn’t support others. This is the reason why platform vendors would like to integrate as many devices as possible on their platform. It is very easy to create a platform specific Vorto code generator which allows to transform Vorto device descriptions (so called information models) into formats that are required for an integration into a specific platform. After such a code generator is implemented it is very easy to integrate devices using Information Models that are available within the Vorto repository.</p>
 
+<p><a href="https://marketplace.yatta.de/profiles/4PTx" target="_blank"><strong>Vorto IDE for platform vendors</strong></a></p>
+
 <h2 id="solution-developers">Solution Developers</h2>
 
-<p>Solution developers that integrate devices into specific platforms often have to write a lot of code that could be generated using information about the corresponding device. The Vorto code generator infrastructure allows to do that which results in a significant reduction of development efforts. </p>
+<p>Solution developers that integrate devices into specific platforms often have to write a lot of code that could be generated using information about the corresponding device. The Vorto code generator infrastructure allows to do that which results in a significant reduction of development efforts.</p>
+
+<p><a href="https://marketplace.yatta.de/profiles/KezX" target="_blank"><strong>Vorto IDE for solution developers</strong></a></p>
    
     </section>
 </div>
