Removed play button from What is Vorto image. Removed own generator section

--- a/documentation/code-generators/using-codegenerators.html
+++ b/documentation/code-generators/using-codegenerators.html
@@ -821,57 +821,17 @@
 					     <div class="span8 offset3">
                  <!--base to have relative path for offline navigation -->
 
-<h2 id="defining-projects">Defining Projects</h2>
+<h2 id="using-code-generators">Using Code Generators</h2>
 
-<p>This section details the following topics:  </p>
-
-<p><a href="#projects">Projects</a>  </p>
-
-<p><a href="#creating-a-new-project">Creating a New Project</a>  </p>
-
-<p><a href="#editing-a-project">Editing a Project</a></p>
-
-<h2 id="projects">Projects</h2>
-
-<p>A projects is an entity wherein you can define data types, function blocks and information models.</p>
-
-<h2 id="creating-a-new-project">Creating a New Project</h2>
-
-<p><strong>Prerequisites</strong>  </p>
+<p>You use code generators to generate platform-specific code for both functional blocks and information models. There are the following ways to do this:</p>
 
 <ul>
-  <li>You have started Eclipse.  </li>
-  <li>You have selected the Vorto perspective.</li>
-</ul>
-
-<p><strong>Proceed as follows</strong></p>
-
-<ol>
-  <li>In the <strong>Vorto Model Project Browser</strong>, click the <strong>+</strong> button.<br />
-The <strong>Create new Vorto Project</strong> dialog opens:<br />
-<img src="../../img/documentation/vorto_create_new_vorto_project_dialog.png" alt="Create new Vorto Project dialog" />  </li>
-  <li>Enter a name as <strong>Project Name</strong>, for example, <code>MyVortoProject</code>.  </li>
-  <li>Click on <strong>Finish</strong>.<br />
-The new project is created.<br />
-<img src="../../img/documentation/vorto_new_vorto_project_created.png" alt="New Project" /></li>
-</ol>
-
-<h2 id="editing-a-project">Editing a Project</h2>
-
-<p><strong>Prerequisites</strong></p>
-
-<p>You have created a project (refer to <a href="#creating-a-new-project">Creating a New Project</a>).</p>
-
-<p><strong>Proceed as follows</strong></p>
-
-<p>Define data types, function blocks and information models according to your needs.</p>
-
-<p>Refer to</p>
-
-<ul>
-  <li><a href="../../documentation/editors/datatype.html">Defining Data Types</a></li>
-  <li><a href="../../documentation/editors/functionblock.html">Defining Function Blocks</a></li>
-  <li><a href="../../documentation/editors/information-model.html">Defining Information Models</a></li>
+  <li>Generating code via the Vorto Repository<br />
+(refer to <a href="../../documentation/vorto-repository/web-interface/generate-code-web.html">Generating Code</a>).</li>
+  <li>Generating code via the Eclipse Vorto Toolset<br />
+(refer to <a href="../../documentation/developer-api/testting-code-generator.html">Testing the Code Generator</a>).</li>
+  <li>Generating code via the Vorto CLI Tool<br />
+(refer to <a href="../../documentation/vorto-repository/cli-tool/cli-tool-command-summary.html">Vorto CLI Tool Command Summary, command <code>vorto generate</code></a>).</li>
 </ul>
 
                 </div>
