Fixed release 0.9 news style

--- a/documentation/appendix/datatype-dsl-reference.html
+++ b/documentation/appendix/datatype-dsl-reference.html
@@ -926,7 +926,7 @@ version: int('.' int)*('-'id)?;
 
 <h3 id="entity">Entity</h3>
 
-<p>An Entity consist of </p>
+<p>An Entity consist of</p>
 
 <ul>
   <li>General metadata parameters (<code>namespace, version, displayname, description, category</code>).</li>
@@ -1012,7 +1012,7 @@ version: int('.' int)*('-'id)?;
 
 <h4 id="properties">Properties</h4>
 
-<p>A property consist of </p>
+<p>A property consist of</p>
 
 <ul>
   <li>An optional <em>presence</em> indicator which can either be <code>mandatory</code> or <code>optional</code></li>
@@ -1094,8 +1094,8 @@ the value of that constraint.</p>
 <p>The following constraints are supported</p>
 
 <ul>
-  <li><code>MIN</code> </li>
-  <li><code>MAX</code> </li>
+  <li><code>MIN</code></li>
+  <li><code>MAX</code></li>
   <li><code>STRLEN</code></li>
   <li><code>REGEX</code></li>
 </ul>
@@ -1166,12 +1166,12 @@ mandatory sex as Gender
 <table class="table table-bordered">
 	<tbody>
   <tr>
-    <td><i class="fa fa-info-circle info-note">
-    <td>To find out more about which language elements are available when writing a data type DSL, have a look at the respective DSL Reference. 
+    <td><i class="fa fa-info-circle info-note">&lt;/td&gt;
+    <td>To find out more about which language elements are available when writing a data type DSL, have a look at the respective DSL Reference. &lt;/br&gt;
     Use the keyboard shortcut <span style="font-variant:small-caps;">Ctrl + Space</span> to get a list of available DSL elements, that can be applied in the current scope you are in.</td>
-  
-	
-
+  &lt;/tr&gt;
+	&lt;/tbody&gt;
+&lt;/table&gt;
 </i></td></tr></tbody></table>
 
                 </div>
