--- a/documentation/overview/contribution.html
+++ b/documentation/overview/contribution.html
@@ -833,7 +833,7 @@
   <li>Implementing a complex feature.</li>
 </ul>
 
-<p>If you satisfy our requirements for significant contribution, email your logo to <strong><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#118;&#111;&#114;&#116;&#111;&#045;&#100;&#101;&#118;&#064;&#101;&#099;&#108;&#105;&#112;&#115;&#101;&#046;&#111;&#114;&#103;">&#118;&#111;&#114;&#116;&#111;&#045;&#100;&#101;&#118;&#064;&#101;&#099;&#108;&#105;&#112;&#115;&#101;&#046;&#111;&#114;&#103;</a></strong> to get added to our homepage.</p>
+<p>If you satisfy our requirements for significant contribution, email your logo to <strong><a href="mailto:vorto-dev@eclipse.org">vorto-dev@eclipse.org</a></strong> to get added to our homepage.</p>
 
                 </div>
              </div>
