--- a/documentation/overview/features.html
+++ b/documentation/overview/features.html
@@ -827,27 +827,28 @@
 
 <ul>
   <li>
-    <p>Describe the characteristics and functionality of devices as Information Models, share them with others and generate code with the Eclipse Vorto Toolset  </p>
+    <p>With the IoT Eclipse <strong>Vorto Toolset</strong>, you can describe the characteristics and functionality of devices as Information Models, share them with others and generate code with the help of Code Generators.</p>
 
     <p><img src="../../img/documentation/vorto_features_models.png" alt="Vorto Features Models" width="700px" /></p>
   </li>
   <li>
-    <p>Look up information models in the Vorto Repository  </p>
+    <p>The <strong>Vorto repository</strong> manages your device descriptions (Information Models). Users are able to search device characteristics and device functionality</p>
 
     <p><img src="../../img/documentation/vorto_repository_search.png" alt="Search page" width="700px" /></p>
   </li>
   <li>
-    <p>Integrate devices into platforms easily with the help of platform specific code generators, for example Bosch, AWS, ThingWorx, etc.  </p>
+    <p>Integrate devices into platforms easily with the help of platform specific <strong>code generators</strong>, for example Bosch, AWS, ThingWorx, etc. 
+Many example code generators illustrate the many possibilities of how code generators can be effectively used. They can also be taken as a code reference to implement your own generator with the Generator API.</p>
 
     <p><img src="../../img/documentation/vorto_repository_generators.png" alt="Generators" width="700px" /></p>
   </li>
   <li>
-    <p>A Command Line Interface Tool lets you explore information models, share new information models as well as generate code directly on the Vorto Repository server</p>
+    <p>A <strong>Command Line Interface Tool</strong> lets you explore information models, share new information models as well as generate code directly on the Vorto Repository server</p>
 
     <p><img src="../../img/documentation/vorto_features_cli_tool.png" alt="Vorto CLI Tool" /></p>
   </li>
   <li>
-    <p>Extend Vorto with the Generator API to plug-in your own code generator and make it run both in the Eclipse Vorto Toolset and in the Vorto Repository.</p>
+    <p>Vorto Code Generators convert an Information Model into executable code that is specific for the platform. Every generator translates the platform independent information model into a platform model and lastly source code. The <strong>Vorto Code Generator API</strong> lets you plug in your own code generator into the toolset.</p>
   </li>
 </ul>
 
