--- a/documentation/overview/getting-started.html
+++ b/documentation/overview/getting-started.html
@@ -850,10 +850,10 @@ The <strong>Generator Overview</strong> dialog opens.<br />
   <li>Choose the <strong>Web UI</strong> code generator for generating the souce code for the Web user interface and click the <strong>Generate</strong> button.<br />
 The code is generated.</li>
   <li>Select the Java perspective to check the generated code.<br />
-The following Java projects have been generated:<br />
+The following Java projects have been generated:
     <ul>
       <li><code>java.example.model</code> (Java beans for the selected information model)</li>
-      <li><code>webdevice.example</code> (Web UI for the selected information model)  </li>
+      <li><code>webdevice.example</code> (Web UI for the selected information model)</li>
     </ul>
 
     <p><img src="/img/tutorials/vortoin5minutes/generated-projects.png" alt="Generated Projects" /></p>
