--- a/documentation/overview/system-requirements.html
+++ b/documentation/overview/system-requirements.html
@@ -840,21 +840,21 @@ or</li>
 <table class="table table-bordered">
 <tbody>
   <tr>
-    <td><i class="fa fa-info-circle info-note">
+    <td><i class="fa fa-info-circle info-note">&lt;/td&gt;
     <td>To avoid using a wrong Java version, you can set the required Java version as a preference in the <code>eclipse.ini</code> file:
     <code><br />
       -vmargs<br />
       -Dosgi.requiredJavaVersion=1.8<br />
       ...
     </code></td>
-  
- 
-
+  &lt;/tr&gt;
+ &lt;/tbody&gt;
+&lt;/table&gt;
 
 <table class="table table-bordered">
 <tbody>
   <tr>
-    <td><i class="fa fa-info-circle info-note">
+    <td><i class="fa fa-info-circle info-note">&lt;/td&gt;
     <td>Your operating system, Java installation and Eclipse installation must <strong>all</strong> have either 32bit or 64bit architecture!<br />
     If necessary, you can align the path to the correct Java version as a preference in the <code>eclipse.ini</code> file, e.g.:
     <code><br />
@@ -862,18 +862,18 @@ or</li>
       C:\Program Files\Java\jdk8\bin\javaw.exe<br />
       ...
     </code></td>
-  
- 
-
+  &lt;/tr&gt;
+ &lt;/tbody&gt;
+&lt;/table&gt;
 
 <table class="table table-bordered">
 <tbody>
   <tr>
-    <td><i class="fa fa-info-circle info-note">
+    <td><i class="fa fa-info-circle info-note">&lt;/td&gt;
     <td>Validity period will endure at the most as long as the version of infrastructure software of third party manufacturers defined in this document (Operating Systems, Java, etc.) is publicly and officially supported. We support the most recent patch releases of the respective software product version.</td>
-  
- 
-
+  &lt;/tr&gt;
+ &lt;/tbody&gt;
+&lt;/table&gt;
 </i></td></tr></tbody></table></i></td></tr></tbody></table></i></td></tr></tbody></table>
 
                 </div>
