--- a/documentation/vorto-repository/cli-tool/cli-tool-command-summary.html
+++ b/documentation/vorto-repository/cli-tool/cli-tool-command-summary.html
@@ -861,9 +861,9 @@ Each of them offers a unique functionality and is based on the following syntax:
     <td><code>vorto help</code></td>
     <td>To get more familiar with the CLI Tool commands, it's a good approach to call the <code>vorto help</code> command.<br /><code>vorto help</code> lists you all other possible commands, including flag parameters and examples.</td>
     <td>For (Windows/Mac/Linux),<br />
-      <p><code>vorto help</code>
-    
-  
+      <p><code>vorto help</code>&lt;/b&gt;
+    &lt;/td&gt;
+  &lt;/tr&gt;
   <tr>
     <td><code>vorto query</code></td>
     <td>After everything is successfully setup, you are able to access the Repository.<br /> Via <code>vorto query</code> you can query models of your Repository.
@@ -931,7 +931,7 @@ Each of them offers a unique functionality and is based on the following syntax:
 	</td>
   </tr>
   <tr>
-    <td><code>vorto share<code>
+    <td><code>vorto share<code>&lt;/td&gt;
     <td>Additionally to all this access functionality, you are also able to share your models.<br />
     Therefore you either have to deposit your credentials in the <code>.vortocli.yaml</code> file or you have to pass them as additional parameters.<br />
     Additional flag parameters:<br />
@@ -950,9 +950,9 @@ Each of them offers a unique functionality and is based on the following syntax:
     <code>vorto share /Users/{$username}/Documents/models/TI_SensorTag.infomodel</code><br /><br />
     <code>vorto share /Users/{$username}/Documents/models/TI_SensorTag.infomodel -username vortouser -password password</code>
     </td>
-  
-  
-
+  &lt;/tr&gt;
+  &lt;/tbody&gt;
+&lt;/table&gt;
 </code></code></td></tr></p></td></tr></tbody></table>
 
                 </div>
