--- a/documentation/vorto-repository/eclipse-vorto-integration/setting-preferences-eclipse.html
+++ b/documentation/vorto-repository/eclipse-vorto-integration/setting-preferences-eclipse.html
@@ -841,11 +841,11 @@
 The Preferences dialog opens.</li>
   <li>Navigate to <strong>Vorto &gt; Information Model Repository</strong>.<br />
 <img src="../../../img/documentation/vorto_repository_eclipse_preferences.png" alt="Eclipse preference" /></li>
-  <li>Fill in the entry fields as follows;<br />
+  <li>Fill in the entry fields as follows;
     <ul>
-      <li><strong>URL:</strong> <code>http://vorto.eclipse.org</code>  </li>
-      <li><strong>User:</strong> <code>&lt;your_user_name&gt;</code>  </li>
-      <li><strong>Password</strong> <code>&lt;your_password&gt;</code>  </li>
+      <li><strong>URL:</strong> <code>http://vorto.eclipse.org</code></li>
+      <li><strong>User:</strong> <code>&lt;your_user_name&gt;</code></li>
+      <li><strong>Password</strong> <code>&lt;your_password&gt;</code></li>
     </ul>
   </li>
   <li>Click <strong>OK</strong>.</li>
