--- a/documentation/vorto-repository/web-interface/search-web.html
+++ b/documentation/vorto-repository/web-interface/search-web.html
@@ -846,11 +846,11 @@
 <ol>
   <li>If the <strong>Search</strong> page is not displayed, click <strong>Search</strong> in the menu bar.<br />
 The <strong>Search</strong> page displays the model table containing all shared models.</li>
-  <li>To find a specific model, filter the model table in one or both of the following ways:<br />
+  <li>To find a specific model, filter the model table in one or both of the following ways:
     <ul>
-      <li>Select the appropriate radio button according to the model type you want to search for.  </li>
+      <li>Select the appropriate radio button according to the model type you want to search for.</li>
       <li>In the <strong>Search</strong> entry field, enter a search string to find the item you want, e.g., the function block <code>Accelerometer</code><br />
-<img src="../../../img/documentation/vorto_repository_search_web.png" alt="Searching the Repository" />  </li>
+<img src="../../../img/documentation/vorto_repository_search_web.png" alt="Searching the Repository" /></li>
     </ul>
   </li>
   <li>Click the <strong>Search</strong> button.<br />
@@ -872,24 +872,21 @@ The model table is updated according to the filter criteria and displays a subse
 The information page of the model opens with the active <strong>Model</strong> tab.<br />
 <img src="../../../img/documentation/vorto_repository_model_details.png" alt="Model Details" /><br />
 Among other information on the model, the following data is essential:<br />
-    <ul>
-      <li><strong>References</strong><br />
+  * <strong>References</strong><br />
  Displays the function block model or data type that the selected model is referencing to.<br />
- Click the link(s) to get more details.</li>
-      <li><strong>Used by</strong><br />
+ Click the link(s) to get more details.
+  * <strong>Used by</strong><br />
  Displays the model(s) model(s) using the selected model.<br />
- Click the link(s) to get more details.</li>
-      <li><strong>Other Formats</strong><br />
+ Click the link(s) to get more details.
+  * <strong>Other Formats</strong><br />
  Provides links for downloading the model definitions (XML, DSL or Markdown).<br />
- Click the appropriate link to download the model in the specific format.  </li>
-      <li><strong>Model Preview</strong><br />
+ Click the appropriate link to download the model in the specific format.<br />
+  * <strong>Model Preview</strong><br />
  Provides links for downloading the model definitions (XML, DSL or Markdown).<br />
- Click the appropriate link to download the model in the specific format.  </li>
-      <li><strong>Platform Generators</strong> (for information models only)<br />
+ Click the appropriate link to download the model in the specific format.<br />
+  * <strong>Platform Generators</strong> (for information models only)<br />
  Provides download links for several platform generators with which you can generate code artifacts of your model (refer to <a href="./generate-code-web.html">Generating Code</a>).<br />
-<img src="../../../img/documentation/vorto_repository_information_model_generators.png" alt="Information Model Generators" />  </li>
-    </ul>
-  </li>
+<img src="../../../img/documentation/vorto_repository_information_model_generators.png" alt="Information Model Generators" /></li>
   <li>For the information model type, you can optionally upload or change a suitable image which will also be displayed in the <strong>Model</strong> tab.<br />
 For this, point to the image and click <strong>Click to change image</strong>.<br />
 <img src="../../../img/documentation/vorto_repository_information_model_change_image.png" alt="Add Image" /></li>
