--- a/documentation/appendix/functionblock-dsl-reference.html
+++ b/documentation/appendix/functionblock-dsl-reference.html
@@ -823,11 +823,11 @@
 
 <h2 id="function-block-model-dsl-reference">Function Block Model DSL Reference</h2>
 
-<p>This section details the following topics:  </p>
+<p>This section details the following topics:</p>
 
-<p><a href="#function-block-dsl-syntax">Function Block DSL Syntax</a>  </p>
+<p><a href="#function-block-dsl-syntax">Function Block DSL Syntax</a></p>
 
-<p><a href="#function-block-dsl-semantics">Function Block DSL Semantics</a>  </p>
+<p><a href="#function-block-dsl-semantics">Function Block DSL Semantics</a></p>
 
 <h2 id="function-block-dsl-syntax">Function Block DSL Syntax</h2>
 
@@ -919,17 +919,17 @@ id:
 
 <p>This section details the following topics:</p>
 
-<p><a href="#function-block-model">Function Block Model</a>  </p>
+<p><a href="#function-block-model">Function Block Model</a></p>
 
-<p><a href="#function-block">Function Block</a>  </p>
+<p><a href="#function-block">Function Block</a></p>
 
-<p><a href="#property">Property</a>  </p>
+<p><a href="#property">Property</a></p>
 
-<p><a href="#operation">Operation</a>  </p>
+<p><a href="#operation">Operation</a></p>
 
-<p><a href="#event">Event</a>  </p>
+<p><a href="#event">Event</a></p>
 
-<p><a href="#entity">Entity</a>  </p>
+<p><a href="#entity">Entity</a></p>
 
 <p><a href="#enum">Enum</a></p>
 
@@ -1021,42 +1021,42 @@ functionblock Lamp {
 	<td>Y</td>
     <td>The category should be used to logically group function blocks that semantically belong to the same domain.</td>
     <td>top level category (mandatory) and a sub category (optional), separated by aslash (/)</td>
-    <td>IAP/smarthomeindego</td>
+    <td>IAP/smarthome&lt;/br&gt;indego</td>
   </tr>
   <tr>
     <td>configuration</td>
 	<td>Y</td>
     <td>Contains one or many configuration properties for the function block.</td>
     <td>complex type containing properties (see grammar for Property)</td>
-    <td>...configuration {&nbsp;&nbsp;// properties}</td>
+    <td>...&lt;/br&gt;configuration {&lt;/br&gt;&nbsp;&nbsp;// properties&lt;/br&gt;}</td>
   </tr>
   <tr>
     <td>status</td>
     <td></td>
     <td>Contains one or many status properties for the function block.</td>
     <td>complex type (see grammar for Property)</td>
-    <td>...status {&nbsp;&nbsp;// properties}</td>
+    <td>...&lt;/br&gt;status {&lt;/br&gt;&nbsp;&nbsp;// properties&lt;/br&gt;}</td>
   </tr>
   <tr>
     <td>fault</td>
     <td></td>
     <td>Contains one or many fault properties for the function block.</td>
     <td>complex type (see grammar for Property)</td>
-    <td>...fault {&nbsp;&nbsp;// properties}</td>
+    <td>...&lt;/br&gt;fault {&lt;/br&gt;&nbsp;&nbsp;// properties&lt;/br&gt;}</td>
   </tr>
   <tr>
     <td>operations</td>
     <td></td>
     <td>Contains one or many operations for the function block.</td>
     <td>complex type (see grammar for Operation)</td>
-    <td>...operations {&nbsp;&nbsp;// operations}</td>
+    <td>...&lt;/br&gt;operations {&lt;/br&gt;&nbsp;&nbsp;// operations&lt;/br&gt;}</td>
   </tr>
   <tr>
     <td>events</td>
     <td></td>
     <td>Contains one or many events for the function block.</td>
     <td>complex type (see grammar for Event)</td>
-    <td>...events {&nbsp;&nbsp;// events go here}</td>
+    <td>...&lt;/br&gt;events {&lt;/br&gt;&nbsp;&nbsp;// events go here&lt;/br&gt;}</td>
   </tr>
   </tbody>
 </table>
@@ -1144,7 +1144,7 @@ functionblock Lamp {
     <td>as &lt;type&gt;</td>
 	<td>Y</td>
     <td>The data type of the property.</td>
-    <td>Supported types:
+    <td>Supported types:&lt;/br&gt;
 	  <ul>
 		<li>boolean</li>
 		<li>dateTime</li>
@@ -1166,7 +1166,7 @@ functionblock Lamp {
     <td>with { [propertyAttribute] }</td>
     <td>N</td>
     <td>Additional property attributes</td>
-    <td>Supported property attributes:
+    <td>Supported property attributes:&lt;/br&gt;
     <ul>
     <li>measurementUnit : an Enum literal</li>
     <li>readable: [true or false]</li>
@@ -1178,11 +1178,11 @@ functionblock Lamp {
   <tr>
     <td>&lt;constraints&gt;</td>
     <td></td>
-    <td>Key value pair(s) enclosed by &lt;&gt;, following the pattern:&lt;CONSTRAINT_KEYWORD value&gt;</td>
-    <td>&lt;STRLEN value&gt;, defining the length of a string
-	    &lt;MIN value&gt;, defining the maximum of a numeric property
-		&lt;MAX value&gt;, defining the minimum of a numeric property
-		&lt;REGEX value&gt;, defining the regular expression pattern of the property
+    <td>Key value pair(s) enclosed by &lt;&gt;, following the pattern:&lt;/br&gt;&lt;CONSTRAINT_KEYWORD value&gt;</td>
+    <td>&lt;STRLEN value&gt;, defining the length of a string&lt;/br&gt;
+	    &lt;MIN value&gt;, defining the maximum of a numeric property&lt;/br&gt;
+		&lt;MAX value&gt;, defining the minimum of a numeric property&lt;/br&gt;
+		&lt;REGEX value&gt;, defining the regular expression pattern of the property&lt;/br&gt;
 		&lt;REGEX value&gt;, defining the regular expression pattern of the string property. Value format expected should be of XML schema pattern format, e.g: [A-Z], [0-9], ([a-z][A-Z])+</td>
   </tr>
   <tr>
